Fix the alignment of buttons
The box model was changed from `display: inline-block` to `display: inline-flex` in dbd859e1188d4db51b8f40b22e413109131caed3

--- a/wcfsetup/install/files/style/ui/button.scss
+++ b/wcfsetup/install/files/style/ui/button.scss
@@ -31,9 +31,9 @@ a.button {
 	cursor: pointer;
 	display: inline-flex;
 	font-weight: 400;
+	justify-content: center;
 	margin: 0;
 	padding: 8px 18px;
-	text-align: center;
 	text-decoration: none;
 
 	// input elements do not inherit font family, size and line-height from body
